# continual_learning

./: .gitignore  README.md  pyproject.toml
src/continual_learning/: __init__.py  full_mnist_learning.py
