[project]
name = "continual-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "James Ashford", email = "ashfordj@rocketmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "numpy<2",
    "tqdm>=4.67.1",
]

[project.scripts]
continual-learning = "continual_learning:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
